@@ -432,7 +432,13 @@ cp <i>[dspace-source]</i>/build/dspace.war <i>[tomcat]</i>/webapps
 		<li><code>dc.identifier.uri(link)</code> refers to DC 'identifier.uri' and render as a link</li>
 		<li><code>dc.date.issued(date)</code> refers to DC 'date.issued' and render as a date</li>
 	 </ul>
-
+	 
+  <p>Links can be made from author and subject values to their applicable browse pages. By default
+  this is enabled for author names (links to browse-author) and disabled for subjects (links to browse-subject). They can be
+  changed by editing <code>webui.authorlinks.enable</code> and <code>webui.subjectlinks.enable</code>.
+  The metadata that constitutes authors and subjects is controlled by <code>webui.browse.index.author</code>
+  and <code>webui.browse.index.subject</code>.</p>
+  
   <h3>Customizing the Simple Item Display Metadata for Individual Collections</h3>
 
   <p>Create <code>dspace.cfg</code> entries for each of the "styles" of item display in the same way the default layout is configured. For example,</p>
